add media >1600px

--- a/src/index.html
+++ b/src/index.html
@@ -860,6 +860,7 @@
                 — Полезна для здоровья - журнал Форбс назвал сквош самой здоровой игрой<br>
                 — Доступно - легко начать в любом возрасте
             </div>
+            <button class="slideFooter__more slideFooter__more--uncircle">Подробнее</button>
         </div>
     </section>
 
