--- a/src/index.html
+++ b/src/index.html
@@ -866,6 +866,12 @@
 
     <footer class="footer">
         <div class="footer__nav">
+            <div class="navigation__item navigation__item--red navigation__item--footer">
+                <div class="navigation__block">
+                    <a
+                            class="navigation__link navigation__link--white" href="/"><span class=" logoSymbol logoSymbol--link logoSymbol--white"></span>squash4friends</a>
+                </div>
+            </div>
             <div class="wrapper">
                 <div class="footer__navContainer">
                     <nav class="menu__block navigation nav">
