--- a/src/index.html
+++ b/src/index.html
@@ -272,15 +272,9 @@
                     <div class="instagram__linkBlock linkBlock">
                         <a href="#" class="linkBlock__item linkBlock__item--red">Следить за нами →</a>
                     </div>
-                    <div class="instagram__paginationWrapper">
-                        <button class="slick-prev paginationBlock__item" data-slider="insta-slider"
-                                aria-label="Previous" type="button">&#11104;
-                        </button>
-                        <div class="instagram__pagination paginationBlock"></div>
-                        <button data-slider="insta-slider" class="slick-next paginationBlock__item"
-                                aria-label="Next" type="button">&#10141;
-                        </button>
-                    </div>
+<!--                    <div class="instagram__paginationWrapper">-->
+<!--                        <div class="instagram__pagination paginationBlock"></div>-->
+<!--                    </div>-->
 
                 </div>
             </div>
