--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="navigation__item navigation__item--mobile navigation__item--menu">
-                <button class="navigation__link"><span></span>Меню</button>
+                <button class="navigation__link js-burger"><span></span>Меню</button>
             </div>
             <div class="navigation__item">
                 <a class="navigation__link" href="/clubs.html">Клубы</a>
@@ -90,6 +90,36 @@
             </div>
             <div class="navigation__item">
                 <a class="navigation__link" href="/articles.html">Статьи</a>
+            </div>
+        </nav>
+        <nav class="menu__block navigation navigation--mobile js-navigation nav">
+            <div class="navigation__item">
+                <a class="navigation__link" href="/clubs.html">Клубы</a>
+            </div>
+            <div class="navigation__item">
+                <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
+            </div>
+            <div class="navigation__item">
+                <a class="navigation__link" href="/about.html">О нас</a>
+            </div>
+            <div class="navigation__item">
+                <a class="navigation__link" href="/wiki.html">Сквош-вики</a>
+            </div>
+            <div class="navigation__item">
+                <a class="navigation__link" href="/articles.html">Статьи</a>
+            </div>
+            <div class="navigation__item navigation__item--feedback navigation__item--feedback--480">
+                <button data-modal="#order-ambassador"
+                        class="js-openModal feedback__item linkBlock__item linkBlock__item--white">Стать
+                    амбассадором
+                </button>
+            </div>
+            <div class="navigation__item navigation__item--feedback">
+                <button data-modal="#try-squash"
+                        class="js-openModal feedback__item linkBlock__item linkBlock__item--red">
+                    Попробовать
+                    сквош
+                </button>
             </div>
         </nav>
         <div class="feedback menu__block linkBlock">
@@ -272,10 +302,6 @@
                     <div class="instagram__linkBlock linkBlock">
                         <a href="#" class="linkBlock__item linkBlock__item--red">Следить за нами →</a>
                     </div>
-<!--                    <div class="instagram__paginationWrapper">-->
-<!--                        <div class="instagram__pagination paginationBlock"></div>-->
-<!--                    </div>-->
-
                 </div>
             </div>
         </div>
@@ -498,20 +524,10 @@
                         &rarr;</a>
                 </div>
 
-                <div class="ambassadors__paginationWrapper">
-                    <button class="slick-prev paginationBlock__item" data-slider="ambassador-slider"
-                            aria-label="Previous" type="button">&#11104;
-                    </button>
-                    <div class="ambassadors__pagination paginationBlock"></div>
-                    <button data-slider="ambassador-slider" class="slick-next paginationBlock__item"
-                            aria-label="Next" type="button">&#10141;
-                    </button>
-                </div>
 
             </div>
         </div>
     </section>
-
     <section class="orders innerWrapper">
         <div class="wrapper">
             <div class="orders__title titleText titleText--white titleText--center">Как стать частью squash4friends
@@ -596,15 +612,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="orders__paginationWrapper">
-                <button class="slick-prev paginationBlock__item" data-slider="orders-slider"
-                        aria-label="Previous" type="button">&#11104;
-                </button>
-                <div class="orders__pagination paginationBlock"></div>
-                <button data-slider="orders-slider" class="slick-next paginationBlock__item"
-                        aria-label="Next" type="button">&#10141;
-                </button>
             </div>
         </div>
     </section>
@@ -832,15 +839,6 @@
                 <div class="articles__linkAll linkBlock">
                     <a href="/articles.html" class="linkBlock__item linkBlock__item--white">Все статьи &rarr;</a>
                 </div>
-                <div class="articles__paginationWrapper">
-                    <button class="slick-prev paginationBlock__item" data-slider="articles-slider"
-                            aria-label="Previous" type="button">&#11104;
-                    </button>
-                    <div class="articles__pagination paginationBlock"></div>
-                    <button data-slider="articles-slider" class="slick-next paginationBlock__item"
-                            aria-label="Next" type="button">&#10141;
-                    </button>
-                </div>
             </div>
         </div>
     </section>
@@ -863,7 +861,8 @@
             <div class="navigation__item navigation__item--red navigation__item--footer">
                 <div class="navigation__block">
                     <a
-                            class="navigation__link navigation__link--white" href="/"><span class=" logoSymbol logoSymbol--link logoSymbol--white"></span>squash4friends</a>
+                            class="navigation__link navigation__link--white" href="/"><span
+                            class=" logoSymbol logoSymbol--link logoSymbol--white"></span>squash4friends</a>
                 </div>
             </div>
             <div class="wrapper">
